--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -4,5 +4,9 @@
         <members>*</members>
         <name>ApexClass</name>
     </types>
+    <types>
+	    <members>*</members>
+        <name>LightningMesagingChannel</name>
+    </types>
     <version>52.0</version>
 </Package>
