--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -5,8 +5,9 @@
         <name>ApexClass</name>
     </types>
     <types>
-	    <members>*</members>
-        <name>LightningMesagingChannel</name>
+        <members>*</members>
+        <name>Flow</name>
     </types>
+
     <version>52.0</version>
 </Package>
