--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         ./sfdx/install
 
     - name: Authorize Salesforce Org
-      run: sfdx auth:jwt:grant --clientid ${{ secrets.SF_CLIENT_ID }} --jwtkeyfile assets/server.key --username ${{ secrets.SF_USERNAME }} --instanceurl https://login.salesforce.com
+      run: sfdx force:auth:web:login --clientid ${{ secrets.SF_CLIENT_ID }} --clientsecret ${{ secrets.SF_CLIENT_SECRET }} --username ${{ secrets.SF_USERNAME }} --password ${{ secrets.SF_PASSWORD }} --instanceurl https://login.salesforce.com
 
     - name: Deploy to Salesforce
       run: sfdx force:source:deploy -x manifest/package.xml -u myorg
