Your descriptive commit message

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
       - feature-branch
+  pull_request:
+    branches:
+      - main
+      - feature-branch
 
 jobs:
   deploy:
