--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,9 @@ jobs:
         SF_PASSWORD: ${{ secrets.SF_PASSWORD }}
       run: |
         sfdx auth:web:login --setdefaultusername -r https://login.salesforce.com -a myorg
-
+   
+    - name: Verify Authorization
+      run: sfdx force:org:display -u myorg
+      
     - name: Deploy to Salesforce
       run: sfdx force:source:deploy -x manifest/package.xml -u myorg
