--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,11 +15,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Salesforce CLI
-        run: |
-          wget https://developer.salesforce.com/media/salesforce-cli/sfdx-linux-amd64.tar.xz
-          mkdir sfdx-cli
-          tar -xJf sfdx-linux-amd64.tar.xz -C sfdx-cli --strip-components 1
-          ./sfdx-cli/install
+        run: npm install sfdx-cli --global
+
+        
+      # 4. Verify that the Salesforce CLI has been installed properly.
+      - name: Check Salesforce CLI version
+        run: sfdx --version
 
       - name: Authenticate with Salesforce (Username & Password)
         env:
