--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,10 @@
 name: Deploy to Salesforce (Username-Password Auth)
 
 on:
+  push:
+    branches:
+      - main
+      - master
   pull_request:
     branches:
       - main  # Deploy on push to main branch
