--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,14 +1,13 @@
-name: Deploy to Salesforce (Username-Password Auth)
-
+name: Validate to Salesforce (Username-Password Auth)
 on:
-  push:
+  pull_request:
     branches:
       - main
       - master
     paths:
       - 'force-app/**'
 jobs:
-  deploy:
+  validate:
     runs-on: ubuntu-latest
 
     steps:
@@ -34,9 +33,6 @@ jobs:
           echo "$SFDX_AUTH_URL" > auth-url.txt
           sfdx force:auth:sfdxurl:store -f auth-url.txt -s -a deployOrg
 
-      - name: Deploy metadata
+      - name: Validate metadata
         run: |
-          sfdx force:source:deploy -p force-app -u deployOrg --wait 10 --testlevel NoTestRun
-
-      # for more Details Refer : 
-      # https://www.1sync.co/build-salesforce-deployment-pipeline-with-github-actions
+          sfdx force:source:deploy -c -p force-app
