--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,7 @@ name: Deploy to Salesforce (Username-Password Auth)
 on:
   push:
     branches:
-      - main
-      - master
+      - Salesforce-Main
     paths:
       - 'force-app/**'
 jobs:
